# MoltCraft

./: .gitignore  .replit  API_SPEC.md  CODEBASE_AUDIT.md  MINECLAW_MVP_PLAN.md  MINECLAW_REQUIREMENTS.md  MINECRAFT_SERVER_PLAN.md  package-lock.json  package.json  pyproject.toml  rebuild_all.py  rebuild_continue.py  replit.md  scaling.md  start-all.sh
.agents/: agent_assets_metadata.toml
ai-agent/: agent.py  bot.js
ai-builder/: ai_providers.py  boss_bar.py  build_book.py  chat_watcher.py  mc_builder.py  rcon_client.py
ai-builder-plugin/: build.sh
ai-builder-plugin/resources/: plugin.yml
ai-builder-plugin/src/com/aibuilder/: AIBuilderPlugin.java  (+2 more)
attached_assets/: Pasted-2026-02-17-22-23-49-09-472fa089-User-06-23-49-INFO-Mox-_1771396230082.txt  Pasted-2026-02-18-09-58-48-09-1bdc07cd-User-2026-02-18-09-58-4_1771437571386.txt  projects_1771399460578.csv
client/: index.html  vite.config.js
mineclaw/: api.py  bot-manager.js  db.py  grid.py  package.json  sandbox.py
minecraft-server/: bukkit.yml  server.properties  start.sh
moltcraft/: api.py  bot-manager.js  db.py  grid.py  nbt_builder.py  rcon.py  sandbox.py
openclaw-plugin-mineclaw/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw-plugin-mineclaw/skills/mineclaw/: SKILL.md
openclaw-plugin-mineclaw/src/: channel.ts  config-schema.ts  outbound.ts  runtime.ts  types.ts  webhook-server.ts
openclaw-plugin-mineclaw/typings/: openclaw-plugin-sdk.d.ts
openclaw-skill/: SKILL.md
skill/: SKILL.md
status-page/: server.py  template.html
