[project]
name = "moltcraft"
version = "0.1.0"
description = "Minecraft server with REST API for AI bot control"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "nbtlib>=2.0.4",
    "psycopg2-binary>=2.9.11",
    "uvicorn>=0.40.0",
]
